--- a/src/app/ngif-ngfor/ngif-ngfor.component.html
+++ b/src/app/ngif-ngfor/ngif-ngfor.component.html
@@ -5,3 +5,9 @@
 <h1 *ngIf="false">teste2</h1>
 
 <h1 *ngFor="let numero of arrayNumeros">{{ numero }}</h1>
+
+<div [ngSwitch]="color">
+  <div *ngSwitchCase="'vermelho'">Cor vermelha</div>
+  <div *ngSwitchCase="'azul'">Cor azul</div>
+  <div *ngSwitchDefault>Cor amarela</div>
+</div>
